--- a/src/partials/detail-page/detail_video.html
+++ b/src/partials/detail-page/detail_video.html
@@ -2,9 +2,9 @@
   <div class="detail__menu">
     <div class="detail__menu_head">
       <ul class="detail__list-items">
-        <li><a href="">Description</a></li>
-        <li><a href="">Characteristics</a></li>
-        <li><a href="">Reviews</a></li>
+        <li><a class="detail__menu_description" href="">Description</a></li>
+        <li><a class="detail__menu_character" href="">Characteristics</a></li>
+        <li><a class="detail__menu_reviews" href="">Reviews</a></li>
       </ul>
     </div>
     <div class="detail__description">
