--- a/src/partials/navbar/nav.html
+++ b/src/partials/navbar/nav.html
@@ -27,7 +27,10 @@
     <div class="nav__icons">
       <a href=""><img class="search" src="../../img/search.png" alt="search"></a>
       <a href=""><img class="account" src="../../img/account.png" alt="account"></a>
-      <a href=""><img class="bucket" src="../../img/bucket.png" alt="bucket"></a>
+      <div class="bucket">
+        <a href=""><img src="../../img/bucket.png" alt="bucket"></a>
+        <p class="bucket__ellipse">3</p>
+      </div>
     </div>
   </div>
 </header>
