--- a/src/partials/products/product.html
+++ b/src/partials/products/product.html
@@ -1,14 +1,15 @@
 <section class="product">
   <div class="product__list-item">
-    <div class="product__list">
+    <div class="slider__beats_top"></div>
+    <div class="product__list" id="sale">
       <div class="product__img">
         <img class="product-image" src="../../img/product_1.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
         <p class="product__description">
-          Up to 8 hours of battery life</br>
-          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =</br>
+          Up to 8 hours of battery life
+          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =
           2 hours of playback
         </p>
         <div class="product__buy">
@@ -19,14 +20,14 @@
     </div>
 
     <div class="product__list">
-      <div class="product__img">
+      <div class="product__img" id="new">
         <img class="product-image" src="../../img/product_2.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
         <p class="product__description">
-          Up to 8 hours of battery life</br>
-          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =</br>
+          Up to 8 hours of battery life
+          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =
           2 hours of playback
         </p>
         <div class="product__buy">
@@ -38,13 +39,13 @@
 
     <div class="product__list">
       <div class="product__img">
-        <img src="../../img/product_3.png">
+        <img class="product-image" src="../../img/product_3.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
         <p class="product__description">
-          Up to 8 hours of battery life</br>
-          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =</br>
+          Up to 8 hours of battery life
+          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =
           2 hours of playback
         </p>
         <div class="product__buy">
@@ -56,13 +57,13 @@
 
     <div class="product__list">
       <div class="product__img">
-        <img src="../../img/product_4.png">
+        <img class="product-image" src="../../img/product_4.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
         <p class="product__description">
-          Up to 8 hours of battery life</br>
-          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =</br>
+          Up to 8 hours of battery life
+          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =
           2 hours of playback
         </p>
         <div class="product__buy">
@@ -74,13 +75,13 @@
 
     <div class="product__list">
       <div class="product__img">
-        <img src="../../img/product_5.png">
+        <img class="product-image" src="../../img/product_5.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
         <p class="product__description">
-          Up to 8 hours of battery life</br>
-          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =</br>
+          Up to 8 hours of battery life
+          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =
           2 hours of playback
         </p>
         <div class="product__buy">
@@ -92,13 +93,13 @@
 
     <div class="product__list">
       <div class="product__img">
-        <img src="../../img/product_6.png">
+        <img class="product-image" src="../../img/product_6.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
         <p class="product__description">
-          Up to 8 hours of battery life</br>
-          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =</br>
+          Up to 8 hours of battery life
+          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =
           2 hours of playback
         </p>
         <div class="product__buy">
@@ -110,13 +111,13 @@
 
     <div class="product__list">
       <div class="product__img">
-        <img src="../../img/product_7.png">
+        <img class="product-image" src="../../img/product_7.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
         <p class="product__description">
-          Up to 8 hours of battery life</br>
-          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =</br>
+          Up to 8 hours of battery life
+          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =
           2 hours of playback
         </p>
         <div class="product__buy">
@@ -128,13 +129,13 @@
 
     <div class="product__list">
       <div class="product__img">
-        <img src="../../img/product_8.png">
+        <img class="product-image"   src="../../img/product_8.png">
       </div>
       <div class="product__title">
         <h2>Beatsˣ</h2>
         <p class="product__description">
-          Up to 8 hours of battery life</br>
-          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =</br>
+          Up to 8 hours of battery life
+          With&nbsp;Fast&nbsp;Fuel, a 5-minute charge =
           2 hours of playback
         </p>
         <div class="product__buy">
@@ -143,5 +144,6 @@
         </div>
       </div>
     </div>
+    <div class="slider__beats_bottom"></div>
   </div>
 </section>
