--- a/src/css/_mix.scss
+++ b/src/css/_mix.scss
@@ -1,6 +1,9 @@
+/**** Миксины для различных цветов ****/
+
 $bg_main: #2B2835;
 $bg_main_rgba: rgba(25, 23, 32, 0.47);
 $bg_text: #FFFFFF;
+$clr_price: #9D8220;
 $bd_signup: #BFBFBF;
 $border_input: 1px solid #BFBFBF; //border input в блоке signup
 $bg_product: #F8F8F9;
@@ -12,7 +15,9 @@ $bg_btn_hover: #00B0FF; //цвет button:hover
 $change_color2: #DD5656;
 $change_color3: #030303;
 
-@mixin change_color {  //кнопки выбора цвеа продукта
+
+/**** Кнопки выбора цвеа продукта ****/
+@mixin change_color {
   display: inline-block;
   width: 36px;
   height: 36px;
@@ -22,7 +27,8 @@ $change_color3: #030303;
   margin-left: 13px;
 }
 
-@mixin m-button { //Кнопка для мобильной версии
+/**** Кнопка для мобильной версии ****/
+@mixin m-button {
   font-size: 14px;
   background: black;
   border: none;
@@ -35,7 +41,31 @@ $change_color3: #030303;
   text-align: center;
 }
 
-//Миксины для медиазапросов.
+/**** Кнопка для мобильной версии категории товара****/
+@mixin button_catalog {
+  font-size: 14px;
+  background: black;
+  border: none;
+  color: #FFFFFF;
+  width: 68px;
+  height: 20px;
+  border-radius: 100px;
+  text-decoration: none;
+  margin-left: 41px;
+  text-align: center;
+}
+
+/**** Стрелки для слайдера ****/
+@mixin arrow{
+  height: 22px;
+  width: 22px;
+  border-top: 1px solid black;
+  border-right: 1px solid black;
+  margin-left: 70px;
+  cursor: pointer;
+}
+
+/**** Миксины для медиазапросов ****/
 
 @mixin mobile {
   @media (min-width: 320px) and (max-width: 575px) {
@@ -61,12 +91,23 @@ $change_color3: #030303;
 }
 
 @mixin mobile_size {
-  @media (min-width: 320px) and (max-width: 1024px) {
+  @media (min-width: 320px) and (max-width: 1023px) {
     @content;
   }
 }
 @mixin medium-size {
   @media (min-width: 1024px) and (max-width: 1440px) {
+    @content;
+  }
+}
+@mixin tablet {
+  @media (min-width: 768px) and (max-width: 1023px){
+    @content;
+  }
+}
+
+@mixin main_display {
+  @media (min-width: 320px) and (max-width: 1440px) {
     @content;
   }
 }
