--- a/src/partials/beats-pill/beats-pill.html
+++ b/src/partials/beats-pill/beats-pill.html
@@ -24,7 +24,7 @@
     </div>
     <div class="beats-pill__slider">
       <div>
-        <img class="beats-pill__img" src="../../img/bitmap_1.jpg" alt="slider">
+        <img class="beats-pill__img" src="../../img/bitmap_1.svg" alt="slider">
         <img class="m_beats-pill__img" src="../../img/mobile/m_bitmap_2.svg" alt="m-slider">
       </div>
       <div class="beats-pill__slider_dots">
