--- a/src/partials/detail-page/detail_slider.html
+++ b/src/partials/detail-page/detail_slider.html
@@ -1,13 +1,13 @@
 <div class="slider__beats">
-  <div class="slider__beats_top">
+  <div class="slider__beats_top"></div>
+  <div class="slider__beats_img">
+    <img class="slider__item-img" src="../../img/detail/beats_icons1.png" alt="">
+    <img class="slider__item-img" src="../../img/detail/beats_icons2.png" alt="">
+    <img class="slider__item-img" src="../../img/detail/beats_icons3.png" alt="">
+    <img class="slider__item-img" src="../../img/detail/beats_icons4.png" alt="">
+    <img class="slider__item-img" src="../../img/detail/beats_icons5.png" alt="">
+    <img class="slider__item-img" src="../../img/detail/beats_icons6.png" alt="">
+    <img class="slider__item-img" src="../../img/detail/beats_icons7.png" alt="">
   </div>
-  <div class="slider__beats_bottom">
-  </div>
-  <a href="#slide-1"><img src="../../img/detail/beats_icons1.png" alt=""></a>
-  <a href="#slide-2"><img src="../../img/detail/beats_icons2.png" alt=""></a>
-  <a href="#slide-3"><img src="../../img/detail/beats_icons3.png" alt=""></a>
-  <!--  <a href="#slide-4"><img src="../../img/detail/beats_icons4.png" alt=""></a>-->
-  <!--  <a href="#slide-5"><img src="../../img/detail/beats_icons5.png" alt=""></a>-->
-  <!--  <a href="#slide-6"><img src="../../img/detail/beats_icons6.png" alt=""></a>-->
-  <!--  <a href="#slide-7"><img src="../../img/detail/beats_icons7.png" alt=""></a>-->
+  <div class="slider__beats_bottom"></div>
 </div>
