--- a/src/partials/filter-page/filter_products.html
+++ b/src/partials/filter-page/filter_products.html
@@ -1,7 +1,7 @@
 <section class="filter">
-  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
-  <div id="myDropdown" class="dropdown-content">
-    <input type="text" placeholder="Search.." id="myInput">
+  <!--  <button onclick="myFunction()" class="dropbtn">Dropdown</button>-->
+  <!--  <div id="myDropdown" class="dropdown-content">-->
+  <!--    <input type="text" placeholder="Search.." id="myInput">-->
   <div class="filter__container">
     <div class="filter__title">
       <p>Earphones</p>
@@ -10,15 +10,13 @@
       <p>Price</p>
     </div>
     <div class="filter__slider">
-      <p>
-        <input class="filter__slider_price" type="number" id="price_min">
-        <input class="filter__slider_price price_max" type="number" id="price_max">
-      </p>
-      <div class="slider__range"  id="slider-range"></div>
+      <input class="filter__slider_price price_min" type="number" id="price_min">
+      <input class="filter__slider_price price_max" type="number" id="price_max">
     </div>
+    <div class="slider__range"  id="slider-range"></div>
     <div class="filter__check">
-      <label class="filter__checkbox">
-        <input type="checkbox" checked>
+      <label  class="filter__checkbox">
+        <input type="checkbox">
         <span>Sale</span>
       </label>
       <label class="filter__checkbox" >
@@ -56,3 +54,4 @@
     </div>
   </div>
 </section>
+
