--- a/src/partials/headphones/headphones.scss
+++ b/src/partials/headphones/headphones.scss
@@ -61,10 +61,10 @@
   width: 508px;
   padding-top: 121px;
   @include mobile {
-    padding-left: 19px;
+    padding: 0 0 0 19px;
   }
   @include width-1024{
-    width: 50%;
+    padding: 40px 0 50px 0;
   }
 }
 
