--- a/src/partials/beatsx/beatsx.html
+++ b/src/partials/beatsx/beatsx.html
@@ -17,6 +17,9 @@
         <p class="beatsx__buy">$299.95</p>
         <button class="beatsx__button">BUY NOW</button>
       </div>
+      <div class="beatsx__music">
+        <p>$60 Apple Music gift card with purchase of select Beats products.*</p>
+      </div>
     </div>
     <div class="beatsx__image">
       <img class="beatsx__img" src="../../img/bitmap_3.svg" alt="image">
