--- a/src/partials/filter-page/filter_products.html
+++ b/src/partials/filter-page/filter_products.html
@@ -1,7 +1,4 @@
 <section class="filter">
-  <!--  <button onclick="myFunction()" class="dropbtn">Dropdown</button>-->
-  <!--  <div id="myDropdown" class="dropdown-content">-->
-  <!--    <input type="text" placeholder="Search.." id="myInput">-->
   <div class="filter__container">
     <div class="filter__title">
       <p>Earphones</p>
@@ -43,14 +40,16 @@
       <p>Type</p>
     </div>
     <div class="filter__type_select">
-      <select class="type_select">
-        <option class="type_list">Closed-Back</option>
-        <option class="type_list">Open-Back</option>
-        <option class="type_list">On-Ear</option>
-        <option class="type_list">Over-Ear</option>
-        <option class="type_list">In-Ear</option>
-        <option class="type_list">Earbuds</option>
-      </select>
+      <label>
+        <select class="type_select">
+          <option class="type_list">Closed-Back</option>
+          <option class="type_list">Open-Back</option>
+          <option class="type_list">On-Ear</option>
+          <option class="type_list">Over-Ear</option>
+          <option class="type_list">In-Ear</option>
+          <option class="type_list">Earbuds</option>
+        </select>
+      </label>
     </div>
   </div>
 </section>
