--- a/src/partials/products/product.html
+++ b/src/partials/products/product.html
@@ -1,6 +1,5 @@
 <section class="product">
-  <div class="product__list-item">
-    <div class="slider__beats_top"></div>
+  <div class="product__list-item" id="carousel">
     <div class="product__list" id="sale">
       <div class="product__img">
         <img class="product-image" src="../../img/product_1.png">
@@ -109,7 +108,7 @@
       </div>
     </div>
 
-    <div class="product__list">
+    <div class="product__list product__hidden">
       <div class="product__img">
         <img class="product-image" src="../../img/product_7.png">
       </div>
@@ -127,7 +126,7 @@
       </div>
     </div>
 
-    <div class="product__list">
+    <div class="product__list product__hidden">
       <div class="product__img">
         <img class="product-image"   src="../../img/product_8.png">
       </div>
