--- a/src/page-about/page.scss
+++ b/src/page-about/page.scss
@@ -6,6 +6,7 @@
 @import "../css/filter_change_color.scss";
 @import "../css/_mix_fonts.scss";
 @import "../css/_mix.scss";
+@import "../partials/filter-page/pagination";
 
 .filter__title_mobile {
   display: none;
@@ -22,63 +23,27 @@
 
 .container__grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  max-width: 1440px;
-}
-.filter__products{
-  margin-top: 203px;
+  grid-template-columns: 1fr 4fr;
 }
 
 /**** Переопределение стилей для Products ****/
 
 .product__list-item {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin: 0;
-  @include width-1024{
-    grid-template-columns: 1fr 1fr;
-  }
-  @include mobile{
-    grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(296px, 296px));
+  grid-template-rows: repeat(2, 543px);
+  @include width-768{
+    padding: 0 45px 0 45px;
   }
 }
 
-.product-image{
-  @include mobile{
-    width: 40vw;
-  }
+.product__img{
+  object-fit: cover;
 }
 
-.product__title{
-  @include mobile {
-    padding: 0;
-    max-width: 40%;
-    width: 100%;
-    h2{
-      font-size: 18px;
-      line-height: 24px;
-    }
-  }
+.product__hidden{
+  display: none;
 }
-.product__button{
-  @include mobile {
-    @include button_catalog;
-    font-size: 9px;
-    line-height: 11px;
-    margin: 15px 0 20px 10px;
-  }
-}
-.product__price{
-  @include mobile {
-    font-size: 11px;
-    line-height: 13px;
-  }
-}
-.product__description{
-  @include mobile{
-    font-size: 8px;
-    line-height: 12px;
-  }
-}
+
 
 
