--- a/src/partials/beats-pill/beats-pill.html
+++ b/src/partials/beats-pill/beats-pill.html
@@ -23,9 +23,12 @@
       </div>
     </div>
     <div class="beats-pill__slider">
-      <div>
+      <div class="m_beats-pill__slider">
+        <button class="beats-pill__prev" id="button_prev"> < </button>
         <img class="beats-pill__img" src="../../img/bitmap_1.svg" alt="slider">
         <img class="m_beats-pill__img" src="../../img/mobile/m_bitmap_2.svg" alt="m-slider">
+        <img class="m_beats-pill__slide" id="m_beats-pill__img_slide">
+        <button class="beats-pill__next" id="button_next"> > </button>
       </div>
       <div class="beats-pill__slider_dots">
         <div class="beats-pill__slider_active"></div>
