--- a/src/partials/beatsx/beatsx.scss
+++ b/src/partials/beatsx/beatsx.scss
@@ -4,7 +4,6 @@
 .beatsx__container {
   position: relative;
   display: flex;
-  width: 100%;
   height: 844px;
   background: $bg_product;
   top: 171px;
@@ -16,8 +15,12 @@
     z-index: 0;
   }
   @include width-1024{
-    height: 744px;
-    top: 71px
+    top: 70px;
+    height: 90%;
+  }
+  @include width-768{
+    top: 35px;
+    height: 90%;
   }
 }
 
@@ -33,6 +36,9 @@
   @include width-1024{
     padding-top: 100px;
     padding-left: 40px;
+  }
+  @include width-768{
+    padding: 40px;
   }
 }
 
@@ -72,15 +78,11 @@
 .beatsx__img{
   position: absolute;
   flex: auto;
-  top: 4.5%;
   left: 46.9%;
   width: 53%;
   height: auto;
   @include mobile{
     display: none;
-  }
-  @include width-1024{
-    padding-top: 40px;
   }
 }
 
@@ -119,4 +121,19 @@
 
 .beatsx__button:hover {
   background: $bg_btn_hover;
+}
+
+.beatsx__music {
+  display: none;
+  @include mobile{
+    display: block;
+    padding-top: 25px;
+    padding-bottom: 36px;
+    @include fonts_normal;
+    font-size: 13px;
+    line-height: 20px;
+    color: $bg_main;
+    mix-blend-mode: normal;
+    opacity: 0.52;
+  }
 }
