--- a/src/partials/detail-page/detail_slider.scss
+++ b/src/partials/detail-page/detail_slider.scss
@@ -23,7 +23,7 @@
     width: 0;
   }
   @include width-1024{
-    padding-left: 17px;
+    display: none;
   }
   @include medium-size{
     padding-left: 17px;
@@ -71,4 +71,37 @@
 
 .slider__item-img:nth-of-type(5) {
   top: 400px
+}
+
+//Стили для слайдера Beats-Pill
+
+@include mobile {
+  .m_beats-pill__img {
+    display: none;
+    position: relative;
+  }
+}
+
+.beats-pill__prev, .beats-pill__next {
+  @include mobile {
+    display: block;
+    height: 36px;
+    margin-top: 33%;
+    border: none;
+    border-radius: 50px;
+  }
+  @include width576-1024 {
+    display: block;
+  }
+}
+.beats-pill__prev {
+  @include mobile {
+    margin-left: 6px;
+  }
+}
+
+.m_beats-pill__slider {
+  @include mobile {
+    display: flex;
+  }
 }
